need more work on styling the form to align correctly and deleted duplicated codes or empty spaces

--- a/Project3/style.css
+++ b/Project3/style.css
@@ -84,9 +84,6 @@ body{
     padding: 50px;
 }
 
-.form small {
-    /*visibility: hidden;*/
-}
 .form input{
     display: block;
 }
